--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
-body {
-    @apply font-primary
-}
-
 * {
     -webkit-tap-highlight-color: transparent; 
 }
+body {
+    @apply font-primary
+}
+.active {
+    @apply bg-customBlack text-white py-2 px-4 rounded-md border-2 border-customBlack
+}
+
