--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ body {
     @apply font-primary
 }
 .active {
-    @apply bg-customBlack text-white py-2 px-4 rounded-md border-2 border-customBlack
+    @apply border-b-customBlack text-customBlack py-2 px-4 rounded-md border-b-2
 }
 
